# snapAI-backend

./: .env  .env.example  Dockerfile  db.sqlite3  entrypoint.sh  error  index.html  manage.py  pyproject.toml  req.txt  test
.github/workflows/: deploy.yml
api/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  verify_apple_token_once.py  views.py  views_auth_social.py  views_iap.py
api/migrations/: 0001_initial.py  0002_pendingsignup.py  0002_remove_pendingsignup_api_pending_email_33d466_idx_and_more.py  0003_alter_pendingsignup_options_and_more.py  0003_entitlement_paymentreceiptios.py  0004_alter_pendingsignup_options_and_more.py  0004_report.py  0005_pendingsignup_otp_sent_at_pendingsignup_updated_at_and_more.py  0006_pendingsignup_resends.py
api/services/: emailer.py  openai_vision.py  social_verify.py
db/: db.sqlite3
deploy/dev/: docker-compose.yml  nginx.conf
deploy/prod/: docker-compose.yml  nginx.conf
snapAI/: asgi.py  settings.py  urls.py  wsgi.py
