[project]
name = "snapai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.15",
  "aiosignal==1.4.0",
  "annotated-types==0.7.0",
  "anyio==4.10.0",
  "asgiref==3.9.1",
  "attrs==25.3.0",
  "cachetools==5.5.2",
  "certifi==2025.8.3",
  "charset-normalizer==3.4.3",
  "cryptography>=46.0.2",
  "distro==1.9.0",
  "Django==5.2.6",
  "django-cors-headers==4.9.0",
  "django-filter==25.1",
  "djangorestframework==3.16.1",
  "djangorestframework_simplejwt==5.5.1",
  "drf-spectacular==0.28.0",
  "drf-spectacular-sidecar==2025.9.1",
  "drf-yasg==1.21.10",
  "frozenlist==1.7.0",
  "google-auth==2.40.3",
  "gunicorn>=23.0.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.10",
  "inflection==0.5.1",
  "jiter==0.11.0",
  "jsonschema==4.25.1",
  "jsonschema-specifications==2025.9.1",
  "multidict==6.6.4",
  "openai==1.108.1",
  "packaging==25.0",
  "pillow==11.3.0",
  "propcache==0.3.2",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pydantic==2.11.9",
  "pydantic_core==2.33.2",
  "PyJWT==2.10.1",
  "python-dotenv==1.1.1",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "referencing==0.36.2",
  "requests==2.32.5",
  "rpds-py==0.27.1",
  "rsa==4.9.1",
  "sniffio==1.3.1",
  "sqlparse==0.5.3",
  "tqdm==4.67.1",
  "typing-inspection==0.4.1",
  "typing_extensions==4.15.0",
  "uritemplate==4.2.0",
  "urllib3==2.5.0",
  "yarl==1.20.1",
]
